test/error/StBreakInvalid.ci
public static class Test
{
	public static bool Run()
	{
		break; // ERROR: Break outside a loop or switch
	}
}
